@@ -1,3 +1,7 @@
+version 20070618_2
+Added the expires HTTP header to expire each page -1d (ASAP!)
+This ought to keep browsers from caching the page.
+
 version 20070618_1
 Added a fallback library of modules to help make installation
 super-fast.
